# pico_trail

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  README.md  build.rs  package.json  rust-toolchain.toml
.cargo/: config.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
.serena/: project.yml
.serena/memories/: code_style_and_conventions.md  codebase_structure.md  project_overview.md  suggested_commands.md  task_completion_checklist.md  tdl_process.md
boards/: freenove_standard.hwdef
boards/common/: rp2350.hwdef
config/: remark-format.json  remark-lint-external.json  remark-lint.json
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/core/src/ahrs/: calibration.rs  dcm.rs  mod.rs  traits.rs
crates/core/src/arming/: error.rs  mod.rs
crates/core/src/kinematics/: differential_drive.rs
crates/core/src/mission/: command.rs  executor.rs  mod.rs  sequencer.rs  state.rs
crates/core/src/mode/: mod.rs  nav.rs  state.rs  traits.rs
crates/core/src/motor/: mod.rs
crates/core/src/navigation/: controller.rs  geo.rs  heading.rs  heading_filter.rs  mod.rs  path_recorder.rs  types.rs
crates/core/src/parameters/: arming.rs  battery.rs  block.rs  circle.rs  compass.rs  crc.rs  error.rs  failsafe.rs  fence.rs  loiter.rs  mod.rs  navigation.rs  registry.rs  storage.rs  wifi.rs
crates/core/src/rc/: mod.rs
crates/core/src/scheduler/: mod.rs  registry.rs  stats.rs  types.rs
crates/core/src/servo/: mod.rs
crates/core/src/traits/: mod.rs  time.rs
crates/firmware/: Cargo.toml  build.rs
crates/firmware/examples/: bno086_demo.rs  pico_trail_rover.rs
crates/firmware/src/: lib.rs
crates/firmware/src/communication/mavlink/: dispatcher.rs  parser.rs  state.rs  status_notifier.rs  task.rs  transport_router.rs  writer.rs
crates/firmware/src/communication/mavlink/handlers/: command.rs  mission.rs  navigation.rs  param.rs  rc_input.rs  telemetry.rs
crates/firmware/src/communication/mavlink/transport/: mod.rs  udp.rs
crates/firmware/src/communication/mavlink/vehicle/: mod.rs  surface_boat.rs
crates/firmware/src/communication/shtp/: i2c.rs  mod.rs
crates/firmware/src/core/: log_buffer.rs  log_router.rs  logging.rs  mod.rs
crates/firmware/src/core/arming/: checks.rs  cleanup.rs  disarm.rs  initialization.rs  mod.rs  monitoring.rs  tasks.rs
crates/firmware/src/core/mission/: mod.rs  state.rs
crates/firmware/src/core/parameters/: crc.rs  mod.rs  registry.rs  saver.rs  storage.rs
crates/firmware/src/core/scheduler/: mod.rs  monitor.rs  stats.rs  task.rs  types.rs
crates/firmware/src/core/scheduler/tasks/: mod.rs
crates/firmware/src/core/traits/: mod.rs  sync.rs  time.rs
crates/firmware/src/devices/: gps.rs  gps_operation.rs
crates/firmware/src/devices/gps/init/: mod.rs
crates/firmware/src/devices/imu/: mock.rs  mod.rs
crates/firmware/src/devices/imu/bno086/: driver.rs  driver_gpio.rs  gpio.rs  mod.rs  reports.rs
crates/firmware/src/devices/imu/icm20948/: driver.rs  registers.rs
crates/firmware/src/devices/imu/mpu9250/: config.rs  driver.rs  mod.rs
crates/firmware/src/devices/traits/: mod.rs  quaternion.rs
crates/firmware/src/libraries/: mod.rs
crates/firmware/src/libraries/kinematics/: mod.rs
crates/firmware/src/libraries/motor_driver/: hbridge.rs  mod.rs
crates/firmware/src/libraries/rc_channel/: mod.rs
crates/firmware/src/libraries/srv_channel/: mod.rs
crates/firmware/src/parameters/: arming.rs  battery.rs  board.rs  circle.rs  compass.rs  fence.rs  loiter.rs  mod.rs  storage.rs  wifi.rs
crates/firmware/src/platform/: error.rs  mod.rs  time.rs
crates/firmware/src/platform/mock/: i2c.rs  mod.rs  platform.rs  pwm.rs  spi.rs  timer.rs
crates/firmware/src/platform/rp2350/: flash.rs  i2c.rs  network.rs  platform.rs  spi.rs  timer.rs  uart.rs
crates/firmware/src/platform/rp2350/devices/: mod.rs
crates/firmware/src/platform/rp2350/tasks/: control.rs
crates/firmware/src/platform/rp2350/transport/: mod.rs  udp.rs
crates/firmware/src/platform/traits/: flash.rs  gpio.rs  mod.rs  platform.rs  timer.rs
crates/firmware/src/rover/mode/: auto.rs  circle.rs  guided.rs  loiter.rs  manual.rs  mod.rs  rtl.rs  smartrtl.rs
crates/firmware/src/subsystems/: battery_failsafe.rs  mod.rs
crates/firmware/src/subsystems/ahrs/: calibration.rs  dcm.rs  mod.rs  task.rs  traits.rs
crates/firmware/src/subsystems/navigation/: controller.rs  geo.rs  heading.rs  mod.rs  path_recorder.rs  types.rs
crates/sitl/: Cargo.toml  README.md
crates/sitl/examples/: README.md  basic_sitl.rs  multi_vehicle.rs
crates/sitl/src/: error.rs  lib.rs  types.rs
crates/sitl/src/adapter/: capabilities.rs  gazebo.rs  lightweight.rs  mod.rs
crates/sitl/src/bridge/: mod.rs  registry.rs  time.rs
crates/sitl/src/gcs/: mod.rs  telemetry.rs
crates/sitl/src/platform/: gpio.rs  mod.rs  pwm.rs  timer.rs  uart.rs
crates/sitl/src/vehicle/: config.rs  mod.rs
crates/sitl/tests/: adapter_tests.rs  bridge_tests.rs
docker/: Dockerfile.gazebo
docs/: TODO-analysis-backlog.md  TODO-motor.md  architecture.md  feature-backlog.md  hwdef-specification.md  mavlink.md  parallel-development.md  parameters.md  scheduler.md  sitl-guide.md  tdl.md  traceability.md  wifi-configuration.md
docs/adr/: ADR-00001-ahrs-algorithm-selection.md  ADR-00002-mavlink-implementation.md  ADR-00004-storage-strategy.md  (+68 more)
examples/: blink_test.rs  bno086_demo.rs  debug_probe_test.rs  flash_minimal_test.rs  log_only_test.rs  mavlink_demo.rs  mavlink_demo_network.rs  mavlink_demo_usb.rs  motor_channel_test.rs  motor_m1_only.rs  motor_m4_only.rs  motor_no_split_test.rs  mpu9250_test.rs  param_persistence_demo.rs  param_persistence_hardware_test_usb.rs  param_persistence_power_loss_test.rs  pico_trail_rover.rs  scheduler_demo.rs  scheduler_demo_usb.rs  usb_logger_test.rs  wifi_webrequest.rs
scripts/: build-rp2350.sh  check-core-no-cfg.sh  check-platform-isolation.sh  generate-metadata.sh  setup_gazebo_models.sh  tdl-new-id.sh  tdl-new-id.test.ts  tdl-new-id.ts  trace-status.test.ts  trace-status.ts
src/: lib.rs
tests/: integration.rs
(+988 files in other folders)
