[workspace]
members = [
    "crates/core",
    "crates/firmware",
    "crates/sitl",
]
# Only check core and sitl crates by default (firmware requires embedded target)
default-members = [
    "crates/core",
    "crates/sitl",
]
resolver = "2"

# Workspace-level profiles apply to all member crates

# cargo build/run
[profile.dev]
# default is opt-level = '0', but that makes very
# verbose machine code
opt-level = 's'
# trade compile speed for slightly better optimisations
codegen-units = 1

# cargo build/run --release
[profile.release]
# default is opt-level = '3', but that makes quite
# verbose machine code
opt-level = 's'
# trade compile speed for slightly better optimisations
codegen-units = 1
# Use Link Time Optimisations to further inline things across
# crates
# Note: 'fat' LTO causes bitcode loading issues with rp235x-hal 0.3.0
# Using 'thin' instead for better compatibility
lto = 'thin'
# Leave the debug symbols in (default is no debug info)
debug = 2
